--- a/app/src/main/res/layout/profile_activity_layout.xml
+++ b/app/src/main/res/layout/profile_activity_layout.xml
@@ -40,10 +40,10 @@
                 android:id="@+id/quoteText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Loading your profile..."
+                android:text="Loading your next great read..."
                 android:textSize="16sp"
                 android:textStyle="italic"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:gravity="center"
                 android:lineSpacingExtra="4sp" />
 
@@ -54,7 +54,7 @@
                 android:text="Author"
                 android:textSize="14sp"
                 android:textColor="@color/gray"
-                android:gravity="end"
+                android:gravity="center"
                 android:layout_marginTop="8dp" />
 
         </LinearLayout>
