--- a/app/src/main/res/layout/view_book_activity.xml
+++ b/app/src/main/res/layout/view_book_activity.xml
@@ -43,7 +43,7 @@
                 android:text="Loading your next great read..."
                 android:textSize="16sp"
                 android:textStyle="italic"
-                android:textColor="@color/black"
+                android:textColor="@color/gray"
                 android:gravity="center"
                 android:lineSpacingExtra="4sp" />
 
@@ -54,7 +54,7 @@
                 android:text="Author"
                 android:textSize="14sp"
                 android:textColor="@color/gray"
-                android:gravity="end"
+                android:gravity="center"
                 android:layout_marginTop="8dp" />
 
         </LinearLayout>
@@ -152,8 +152,11 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/genreRv"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="wrap_content"
+                android:paddingStart="20dp"
+                android:layout_marginTop="10dp"
                 android:nestedScrollingEnabled="false"
+                android:clipToPadding="false"
                 app:layout_constraintBottom_toTopOf="@id/line1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -164,7 +167,7 @@
                 android:layout_width="0dp"
                 android:layout_height="1dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:background="@color/black"
                 app:layout_constraintBottom_toTopOf="@id/addToListBtn"
@@ -350,7 +353,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/staticReviewsHeader" />
