--- a/app/src/main/res/layout/item_profile_favorite_book.xml
+++ b/app/src/main/res/layout/item_profile_favorite_book.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="120dp"
-    android:layout_height="160dp"
+    android:layout_height="180dp"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
@@ -15,9 +15,10 @@
         <ImageView
             android:id="@+id/bookCoverIv"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="140dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/content" />
+            android:background="@color/white"
+            android:src="@drawable/book_placeholder" />
 
         <TextView
             android:id="@+id/bookTitleTv"
