--- a/app/src/main/res/layout/profile_activity_layout.xml
+++ b/app/src/main/res/layout/profile_activity_layout.xml
@@ -292,9 +292,11 @@
                 android:id="@+id/favoritesRv"
                 android:layout_width="0dp"
                 android:layout_height="180dp"
-                android:layout_marginStart="20dp"
+                android:paddingStart="20dp"
+                android:clipToPadding="false"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
+                android:overScrollMode="never"
                 android:nestedScrollingEnabled="false"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
