--- a/app/src/main/res/layout/review_book_layout.xml
+++ b/app/src/main/res/layout/review_book_layout.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:srcCompat="@drawable/content" />
+        app:srcCompat="@drawable/book_placeholder" />
 
     <TextView
         android:id="@+id/bookTitleDialogTv"
