--- a/app/src/main/res/layout/review_item_layout.xml
+++ b/app/src/main/res/layout/review_item_layout.xml
@@ -20,8 +20,7 @@
             android:id="@+id/userPfpIv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/user_pfp_1"/>
+            android:scaleType="centerCrop" />
     </androidx.cardview.widget.CardView>
 
     <TextView
