--- a/app/src/main/res/layout/view_book_activity.xml
+++ b/app/src/main/res/layout/view_book_activity.xml
@@ -67,6 +67,7 @@
         android:background="@color/white"
         android:fillViewport="true"
         android:visibility="visible"
+        android:overScrollMode="never"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +124,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/bannerIv"
                 app:layout_constraintVertical_bias="0"
-                app:srcCompat="@drawable/content" />
+                app:srcCompat="@drawable/book_placeholder" />
 
             <RatingBar
                 android:id="@+id/avgRatingRb"
@@ -157,6 +158,7 @@
                 android:layout_marginTop="10dp"
                 android:nestedScrollingEnabled="false"
                 android:clipToPadding="false"
+                android:overScrollMode="never"
                 app:layout_constraintBottom_toTopOf="@id/line1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -353,6 +355,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:nestedScrollingEnabled="false"
+                android:overScrollMode="never"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/staticReviewsHeader" />
