More consistent favorite books retrieval

--- a/app/src/main/res/layout/profile_activity_layout.xml
+++ b/app/src/main/res/layout/profile_activity_layout.xml
@@ -101,8 +101,7 @@
                     android:id="@+id/profilePicIv"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/user_pfp_placeholder" />
+                    android:scaleType="centerCrop" />
 
             </androidx.cardview.widget.CardView>
 
@@ -219,7 +218,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/updateProfileBtn"
-                android:layout_width="100dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:text="Update"
@@ -242,7 +241,7 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/logoutBtn"
-                android:layout_width="100dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="20dp"
                 android:text="Logout"
