--- a/app/src/main/res/layout/saved_lists_layout.xml
+++ b/app/src/main/res/layout/saved_lists_layout.xml
@@ -19,6 +19,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/deleteModeBtn"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="8dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="@string/delete_mode"
+        android:src="@drawable/ic_delete_outline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/main_green" />
+
+
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/createNewListBtn"
         android:layout_width="0dp"
