--- a/app/src/main/res/layout/home_genre_item_layout.xml
+++ b/app/src/main/res/layout/home_genre_item_layout.xml
@@ -2,16 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_height="40dp"
     android:background="@android:color/transparent">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/genreCardView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="1dp"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="6dp"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@android:color/transparent"
-            android:padding="8dp"
+            android:padding="6dp"
             android:text="@string/genre_holder"
             android:textColor="@color/black"
             android:textSize="12sp"
