--- a/app/src/main/res/layout/books_card_layout.xml
+++ b/app/src/main/res/layout/books_card_layout.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:layout_margin="8dp"
     android:padding="8dp">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/bookImageIv"
-        android:layout_width="120dp"
+        android:layout_width="0dp"
         android:layout_height="160dp"
         android:scaleType="centerCrop"
+        app:layout_constraintDimensionRatio="3:4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearanceOverlay="@style/RoundedCornersImageView"
         android:contentDescription="@string/book_image" />
 
@@ -21,12 +23,18 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         android:ellipsize="end"
         android:fontFamily="@font/poppins_medium"
+        android:gravity="center"
         android:maxLines="2"
         android:text="Title"
         android:textAlignment="center"
         android:textColor="@color/black"
-        android:textSize="12sp" />
+        android:textSize="12sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/bookImageIv" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
