--- a/app/src/main/res/layout/genre_item_layout.xml
+++ b/app/src/main/res/layout/genre_item_layout.xml
@@ -21,11 +21,11 @@
             android:id="@+id/genreTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="@android:color/white"
             android:padding="6dp"
             android:text="@string/genre_holder"
             android:textColor="@color/black"
-            android:textSize="10sp"
+            android:textSize="12sp"
             android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
