--- a/app/src/main/res/layout/home_genre_item_layout.xml
+++ b/app/src/main/res/layout/home_genre_item_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="40dp"
-    android:background="@android:color/transparent">
+    android:background="@color/white">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/genreCardView"
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         app:cardCornerRadius="6dp"
-        app:cardBackgroundColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
