--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -18,7 +18,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <SearchView
+        <androidx.appcompat.widget.SearchView
+
             android:id="@+id/bookSv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,7 +36,7 @@
             app:searchHintIcon="@null"
             app:searchIcon="@drawable/baseline_search_24">
 
-        </SearchView>
+        </androidx.appcompat.widget.SearchView>
 
         <ScrollView
             android:layout_width="match_parent"
