--- a/app/src/main/res/layout/home_genre_item_layout.xml
+++ b/app/src/main/res/layout/home_genre_item_layout.xml
@@ -11,18 +11,20 @@
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         app:cardCornerRadius="6dp"
+        app:cardUseCompatPadding="false"
+        app:cardPreventCornerOverlap="false"
+        app:rippleColor="@android:color/transparent"
+        app:strokeColor="@color/black"
+        app:strokeWidth="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:strokeColor="@color/black"
-        app:strokeWidth="1dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/genreTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
             android:padding="6dp"
             android:text="@string/genre_holder"
             android:textColor="@color/black"
@@ -30,4 +32,5 @@
             android:textStyle="bold" />
 
     </com.google.android.material.card.MaterialCardView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
