Update to profile buttons

--- a/app/src/main/res/layout/profile_activity_layout.xml
+++ b/app/src/main/res/layout/profile_activity_layout.xml
@@ -218,19 +218,19 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/updateProfileBtn"
-                android:layout_width="150dp"
+                android:layout_width="135dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_margin="18dp"
                 android:text="Update"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="10sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:backgroundTint="@color/main_green"
                 app:cornerRadius="30dp"
                 app:icon="@drawable/ic_edit"
-                app:iconGravity="top"
-                app:iconPadding="0dp"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
                 app:iconSize="20dp"
                 app:iconTint="@color/white"
                 app:layout_constraintEnd_toStartOf="@+id/logoutBtn"
@@ -241,19 +241,19 @@
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/logoutBtn"
-                android:layout_width="150dp"
+                android:layout_width="135dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"
+                android:layout_margin="18dp"
                 android:text="Logout"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="10sp"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 app:backgroundTint="@color/main_green"
                 app:cornerRadius="30dp"
                 app:icon="@drawable/ic_logout"
-                app:iconGravity="top"
-                app:iconPadding="0dp"
+                app:iconGravity="textStart"
+                app:iconPadding="4dp"
                 app:iconSize="20dp"
                 app:iconTint="@color/white"
                 app:layout_constraintEnd_toEndOf="parent"
