--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -23,9 +23,10 @@
             android:id="@+id/bookSv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:layout_marginBottom="12dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/search_bkg"
             android:nestedScrollingEnabled="false"
             android:paddingVertical="6dp"
